Change Map to ImmutableMap